--- a/Documentazione/main.tex
+++ b/Documentazione/main.tex
@@ -75,14 +75,11 @@ Con il presente progetto si è sviluppata un’applicazione per i produttori di 
 Per utilizzare questa applicazione non sono necessari particolari pre-requisiti, è sufficiente disporre di un computer.\\
 Per avviare l'applicazione è necessario eseguire i seguenti passi:
 \begin{enumerate}
-    \item aprire la cartella "ProgettoBirra";
-    \item selezionare e aprire la cartella "installer";
-    \item selezionare ed eseguire il file "setup.exe"\\
-    comparirà la finestra sottostante\\
-    \includegraphics[scale=0.30]{Immagini/imgpsh_fullsize_anim.png}
-    \item premere installa.\\
-    \includegraphics[scale=0.30]{Immagini/imgpsh_fullsize_anim (1).png}\\
-    Al termine dell'installazione l'applicazione si avvierà automaticamente, in caso contrario è possibile travarla nel menù applicazione.
+    \item selezionare e aprire la cartella "ProgettoBirra";
+    \item selezionare e aprire nuovamente la cartella "ProgettoBirra";
+    \item selezionare e aprire la cartella "bin";
+    \item selezionare e aprire la cartella "Debug";
+    \item selezionare ed eseguire il file "ProgettoBirra.exe".\\
 \end{enumerate}
 
 \section{Funzionamento}
@@ -92,6 +89,7 @@ All’avvio dell’applicazione viene mostrata la schermata iniziale così strut
 \\Per poter utilizzare l’applicazione è necessaria la registrazione, di conseguenza il primo passo da compiere è creare un account premendo “CREA ACCOUNT”. Dopodiché verrà mostrata una finestra così organizzata:\\\\
 \includegraphics[scale=0.30]{Immagini/form/Form Registrazione.jpg}
 \\Una volta inseriti i dati richiesti è possibile procedere con la registrazione premendo “ISCRIVIMI”. Al termine verrà mostrata la schermata iniziale.
+\newpage
 \subsection{Login}
 All’avvio dell’applicazione viene visualizzata la schermata iniziale. Dopo aver inserito le credenziali (email e password) e dopo aver premuto “LOGIN”, viene mostrata la schermata “MENU’” così strutturata:\\\\
 \includegraphics[scale=0.30]{Immagini/form/Form Menu.jpg}
@@ -160,6 +158,9 @@ Premendo “LISTA DELLA SPESA” dal MENU’ viene visualizzata una schermata co
 \subsection{"Che birra faccio oggi?"}
 Premendo “CHE BIRRA FACCIO OGGI?” dal MENU’ viene visualizzato un messaggio che mostra il nome della birra (tra quelle presenti nel ricettario)  e la relativa quantità massima, di cui è possibile preparare la maggior quantità considerando i prodotti presenti nella dispensa.
 
+\section{Troubleshooting}
+Al primo avvio dell'applicazione all'interno dell'ambiente  Visual Studio è possibile che compaia una finestra di dialogo, è sufficiente premere su "Ok" e l'applicazione continuerà la sua esecuzione, al successivo avvio dovrebbe procedere tutto senza interruzioni.\\\\
+\includegraphics[scale=0.60]{Immagini/Finestra di dialogo.png}
 \newpage
 \section{Analisi}
 \subsection{Diagramma dei casi d'uso}
@@ -503,7 +504,7 @@ E' stato usato un metodo già testato per effettuare la connessione con il datab
 
 \subsection{Analisi Sonarqube}
 Viene riportata la schermata di analisi del progetto software.\\\\
-\includegraphics[scale=0.60]{Immagini/form/Sonarqube.png}
+\includegraphics[scale=0.60]{Immagini/Sonarqube.png}
 \\\\
 Sono stati individuati e corretti i principali issue presenti nel codice.
 Non è stato possibile rimuovere i code smells rimanenti in quanto sono parte integrante della struttura del codice e rimuoverli avrebbe richiesto un completo refactor del progetto.
