--- a/Documentazione/main.tex
+++ b/Documentazione/main.tex
@@ -78,7 +78,7 @@ Per avviare l'applicazione è necessario eseguire i seguenti passi:
     \item selezionare e aprire la cartella "ProgettoBirra";
     \item selezionare e aprire nuovamente la cartella "ProgettoBirra";
     \item selezionare e aprire la cartella "bin";
-    \item selezionare e aprire la cartella "Debug";
+    \item selezionare e aprire la cartella "Release";
     \item selezionare ed eseguire il file "ProgettoBirra.exe".\\
 \end{enumerate}
 
